--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="bottom-container">
       <a class="footer-link" href="https://www.linkedin.com/"><strong>LinkedIn</strong></a>
       <a class="footer-link" href="https://twitter.com/"><strong>Twitter</strong></a>
-      <a class="footer-link" href="https://www.appbrewery.co/"><strong>Website</strong></a>
+      <a class="footer-link" href=""><strong>Website</strong></a>
       <p class="copy-right">© 2019 Eslam Tealib.</p>
     </div>
 
